tests/fixtures/invalid/type_mismatch.etcm
spec BadType:
  count: int

impl default:
  count: "two"
